# ODT-REP-DRL

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker_guide.md  docker_instructions.md  dockerfile  environment.yaml
data/: README.md
docs/: Doxyfile
input/: README.md
input/channelFlow/: .gitignore
input/gas_mechanisms/: README.md  not_used.yaml
post/channelFlow/: ChannelVisualizer.py  README.md  RL_realization_convergence_gifs.py  RL_realization_results.py  RL_run_actions_rewards.py  RL_run_actions_rewards_from_nohup.py  anisotropy_tensor.py  anisotropy_tensor_odt_convergence.py  anisotropy_tensor_odt_vs_dns.py  anisotropy_tensor_odt_vs_odtReference.py  barycentric_map.py  calculate_reference_statistics.py  copy_data_from_triton_to_eckert.sh  kinetic_energy_evolution.py  load_end_file_to_dmp_file.py  load_init_file_to_dmp_file.py  main.sh  mainAll.sh  mainRL.sh  reynolds_convergence.py  stats.py  stats_convergence.py  stats_large_database.py  stats_odt_convergence.py  stats_odt_vs_dns.py  stats_odt_vs_odtReference.py  stats_reynolds_convergence.py  test_eigenDecomposition_LinearInterpGrids.py  utils.py
post/coldJet/: basic_stats.py
post/pipeFlow/: stats.py
research/: triplet_map.py
run/: .gitignore  README.md  evolveOneRlz.sh  resetOneRlz.sh  runManyRlz.sh  runOneRlz.sh  runOneRlzFromRestart.sh  runOneRlz_coldJet.sh
source/: CMakeLists.txt  actorCritic.cc  actorCritic.h  cvodeDriver.cc  cvodeDriver.h  domain.cc  domain.h  eddy.h  eigenDecomposition.cc  eigenDecomposition.h  environment.cc  environment.h  inputoutput.cc  inputoutput.h  main.cc  meshManager.cc  micromixer.cc  micromixer.h  param.cc  param.h  processor.cc  processor.h  reinforcementLearning.cc  reinforcementLearning.h  solver.cc  solver.h
source/domainvariables/: dv.cc  (+31 more)
test/: .gitignore  CMakeLists.txt  eigenDecomposition_.cc  eigenDecomposition_.h  eigenDecomposition_test  eigenDecomposition_test.cc  eigenDecomposition_testclass.cc  eigenDecomposition_testclass.h
test/barycentric_cartesian_coordinates/: CMakeLists.txt  README.md  dv_reynolds_stress.cc  dv_reynolds_stress.h  main.cc
test/dcgan_pytorch/: .gitignore  CMakeLists.txt  README.md  dcgan.cpp
test/libtorch_end_to_end/: CMakeLists.txt  README.md  dqn.cc  main.cc
(+59 files in other folders)
