set(CMAKE_INCLUDE_DIRECTORY ../include)
cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(demo)
list(APPEND CMAKE_PREFIX_PATH "${CMAKE_INCLUDE_DIRECTORY}/libtorch_CPU")
find_package(Torch REQUIRED)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
add_executable(demo.x ${CMAKE_CURRENT_SOURCE_DIR}/demo.cc)
target_link_libraries(demo.x "${TORCH_LIBRARIES}")
set_property(TARGET demo.x PROPERTY CXX_STANDARD 17)